# abmforge

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  SUPPORT.md  VISION.md  codemeta.json  index.html  mkdocs.yml  paper.bib  paper.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  model_zoo_proposal.yml  reproducibility_report.yml  rfc.yml
.github/workflows/: ci.yml  docs.yml  package-smoke.yml  pypi-install-smoke.yml  release.yml  testpypi-install-smoke.yml
abm-study-checklist/: index.html
agent-lifecycle/: index.html
analysis/: index.html
api/: index.html
api-stability/: index.html
architecture-overview/: index.html
archive-format/: index.html
archive-grouped-run-summary/: index.html
archive-migration-strategy/: index.html
archive-table-analysis/: index.html
benchmarking/: index.html
benchmarks/: README.md  run_reference_suite.py
benchmarks/mesa/: README.md
community-and-issues/: index.html
contributing/: index.html
dataset-schema-v1/: index.html
delayed-events/: index.html
docs/: abm-study-checklist.md  agent-lifecycle.md  analysis.md  api-stability.md  api.md  architecture-overview.md  archive-format.md  archive-grouped-run-summary.md  archive-migration-strategy.md  archive-table-analysis.md  benchmarking.md  community-and-issues.md  contributing.md  dataset-schema-v1.md  delayed-events.md  examples.md  experiment-archive-v1.md  experiment-archive.md  experiment-replicates.md  experiment-yaml.md  experiments.md  failure-handling.md  first-model.md  getting-started.md  gis.md  index.md  mesa-comparison-methodology.md  model-zoo-research-examples.md  model-zoo.md  odd-export.md  project-templates.md  publication-readiness-review.md  pypi-alpha-release.md  recording.md  reference-reproducible-workflow.md  release-candidate-prep.md  release-checklist.md  release-readiness-no-publish.md  releasing.md  replay.md  (+14 more)
examples/: index.html
examples/gis_space/: run.py
examples/parameter_sweep/: README.md  run.py
examples/reproducible_study/: README.md  __init__.py  analyze.py  documentation.py  model.py  reproduce.py
examples/scenarios/: wealth_baseline.yaml
examples/schelling/: README.md  run.py
examples/sir_epidemic/: README.md  run.py
examples/sugarscape/: README.md  run.py
examples/wealth_model/: README.md  model.py  run.py
experiment-archive/: index.html
experiment-archive-v1/: index.html
experiment-replicates/: index.html
experiment-yaml/: index.html
experiments/: index.html
failure-handling/: index.html
first-model/: index.html
getting-started/: index.html
gis/: index.html
mesa-comparison-methodology/: index.html
model-zoo/: index.html
model-zoo-research-examples/: index.html
model_zoo/: __init__.py
model_zoo/schelling/: README.md  __init__.py  model.py  run.py
odd-export/: index.html
project-templates/: index.html
publication-readiness-review/: index.html
pypi-alpha-release/: index.html
recording/: index.html
reference-reproducible-workflow/: index.html
release-candidate-prep/: index.html
release-checklist/: index.html
release-readiness-no-publish/: index.html
releasing/: index.html
replay/: index.html
reporting/: index.html
reproducibility-manifest-v1/: index.html
reproducibility-tiers/: index.html
researcher-quickstart/: index.html
researcher-workflow/: index.html
scenario-yaml/: index.html
scheduling/: index.html
scripts/: check_release_metadata.py  check_version_consistency.py  smoke_installed_package.py
search/: search_index.json
seed-sequence-policy/: index.html
sensitivity-robustness/: index.html
software-paper-package/: index.html
spaces/: index.html
src/abmforge/templates/builtin/policy/: README.md  pyproject.toml
src/abmforge/templates/builtin/policy/configs/: baseline.yaml  experiment.yaml
src/abmforge/templates/builtin/policy/model/: agents.py  model.py
src/abmforge/templates/builtin/policy/tests/: test_smoke.py
testpypi-dry-run/: index.html
tests/: conftest.py  test_abm_study_checklist.py  test_agent_collection.py  test_agent_lifecycle.py  test_agent_lifecycle_contract.py  test_agent_lifecycle_docs.py  test_api_stability_policy.py  test_architecture_overview_docs.py  test_archive_create_safety.py  test_archive_format_docs.py  test_archive_format_version_validation.py  test_archive_loader.py  test_archive_migration_strategy.py  test_archive_parquet_integrity.py  test_archive_run_index.py  test_archive_summary.py  test_archive_table_helpers.py  test_benchmark_scaffold.py  test_ci_runtime_matrix.py  test_citation_metadata.py  test_cli.py  test_cli_archive.py  test_cli_cite.py  test_cli_error_handling.py  test_cli_experiment.py  test_cli_new.py  test_cli_report.py  test_cli_summarize.py  test_cli_templates.py  test_community_health_files.py  test_community_issue_templates.py  test_continuous_space.py  test_dataset_export.py  test_dataset_run_status_validation.py  test_dataset_schema.py  test_dataset_schema_docs.py  test_delayed_events_docs.py  test_epidemic_template.py  test_event_queue.py  test_event_queue_snapshot_metadata.py  (+81 more)
typed-agents/: index.html
visualization/: index.html
(+130 files in other folders)
