[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abmforge"
version = "0.1.0a1"
description = "A modern, extensible agent-based simulation framework for Python."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Fatih Uludağ", email = "fatihuludag@yyu.edu.tr" }
]
keywords = [
  "agent-based modeling",
  "simulation",
  "abm",
  "complex systems",
  "experiments"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "numpy>=1.26"
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.11",
  "build>=1.2",
  "twine>=5"
]
data = [
  "pandas>=2.2",
  "polars>=1.0",
  "pyarrow>=16"
]
viz = [
  "matplotlib>=3.8"
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5"
]
all = [
  "pandas>=2.2",
  "polars>=1.0",
  "pyarrow>=16",
  "matplotlib>=3.8",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5"
]

[project.urls]
Homepage = "https://github.com/your-org/abmforge"
Documentation = "https://your-org.github.io/abmforge"
Repository = "https://github.com/your-org/abmforge"
Issues = "https://github.com/your-org/abmforge/issues"

[project.scripts]
abmforge = "abmforge.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
abmforge = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
packages = ["abmforge"]
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
