[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abmforge"
version = "0.2.0a4.dev0"
description = "A modern, extensible agent-based simulation framework for Python."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Fatih Uludağ", email = "fatihuludag@yyu.edu.tr" }
]
keywords = [
  "agent-based modeling",
  "simulation",
  "abm",
  "complex systems",
  "experiments"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "numpy>=1.26",
  "pyyaml>=6.0"
]


[project.optional-dependencies]
dev = [
  "build",
  "duckdb>=1.0",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.11",
  "build>=1.2",
  "twine>=5",
  "types-PyYAML>=6.0",
  "pandas-stubs>=2.0",
]
data = [
  "pandas>=2.2",
  "polars>=1.0",
  "pyarrow>=16"
]
analysis = [
    "SALib>=1.5",
]
viz = [
  "matplotlib>=3.8"
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5"
]
all = [
  "pandas>=2.2",
  "polars>=1.0",
  "pyarrow>=16",
  "SALib>=1.5",
  "matplotlib>=3.8",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5"
]

[project.urls]
Homepage = "https://github.com/fatihuludag-lab/abmforge"
Repository = "https://github.com/fatihuludag-lab/abmforge"
Issues = "https://github.com/fatihuludag-lab/abmforge/issues"
Documentation = "https://fatihuludag-lab.github.io/abmforge"

[project.scripts]
abmforge = "abmforge.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
abmforge = [
    "py.typed",
    "templates/builtin/*/*",
    "templates/builtin/*/configs/*",
    "templates/builtin/*/model/*.py",
    "templates/builtin/*/outputs/*",
    "templates/builtin/*/scripts/*.py",
    "templates/builtin/*/tests/*.py",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
exclude = ["^src[\\\\/]abmforge[\\\\/]templates[\\\\/]builtin[\\\\/]"]
python_version = "3.10"
packages = ["abmforge"]
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "SALib",
    "SALib.*",
]
ignore_missing_imports = true
